[package]
name = "async-chatting-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version="*",features=["unstable"]}
tokio = {version ="*", features=["sync"]}
serde = {version ="*", features=["derive","rc"]}
serde_json ="*"